fixed timeline gap

--- a/src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiper.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiper.styles.scss
@@ -90,7 +90,7 @@
   .swiper-pagination {
     @include mut.flexed(
       $wrap: wrap,
-      $gap: 0px,
+      $gap: 5px,
       $justify-content: center
     );
     position: absolute;
